Bug fix on build failed