@@ -1,12 +1,11 @@
 package au.org.aodn.nrmn.restapi.integration;
 
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.apache.commons.lang3.SerializationUtils;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -20,9 +19,12 @@ import au.org.aodn.nrmn.restapi.service.validation.DataValidation;
 import au.org.aodn.nrmn.restapi.test.PostgresqlContainerExtension;
 import au.org.aodn.nrmn.restapi.test.annotations.WithTestData;
 
+import javax.transaction.Transactional;
+
 @Testcontainers
 @SpringBootTest
 @ExtendWith(PostgresqlContainerExtension.class)
+@Transactional
 @WithTestData
 class ATRCMethodCheckIT {
 
@@ -42,20 +44,20 @@ class ATRCMethodCheckIT {
         m1b1.setDepth(depth);
         m1b1.setSiteCode(siteNo);
 
-        StagedRow m2b1 = (StagedRow) SerializationUtils.clone(m1b1);
+        StagedRow m2b1 = SerializationUtils.clone(m1b1);
         m2b1.setMethod("2");
-        StagedRow m2b2 = (StagedRow) SerializationUtils.clone(m2b1);
+        StagedRow m2b2 = SerializationUtils.clone(m2b1);
         m2b1.setBlock("2");
 
-        StagedRow m1b1d8 = (StagedRow) SerializationUtils.clone(m1b1);
+        StagedRow m1b1d8 = SerializationUtils.clone(m1b1);
         m1b1d8.setDepth("8");
-        StagedRow m2b1d8 = (StagedRow) SerializationUtils.clone(m1b1d8);
+        StagedRow m2b1d8 = SerializationUtils.clone(m1b1d8);
         m1b1d8.setMethod("2");
 
-        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, Arrays.asList("ERZ1"),
-                Arrays.asList(), Arrays.asList(m1b1, m2b1, m2b2, m1b1d8, m2b1d8));
+        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, List.of("ERZ1"),
+                List.of(), Arrays.asList(m1b1, m2b1, m2b2, m1b1d8, m2b1d8));
 
-        assertFalse(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
+        Assertions.assertFalse(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
     }
 
     @Test
@@ -72,20 +74,20 @@ class ATRCMethodCheckIT {
         m1b1.setSiteCode(siteNo);
         m1b1.setSpecies("Haliotis rubra");
 
-        var m2b1 = (StagedRow) SerializationUtils.clone(m1b1);
-        var m2b2 = (StagedRow) SerializationUtils.clone(m2b1);
-        var m1b1d8 = (StagedRow) SerializationUtils.clone(m1b1);
-        var m2b1d8 = (StagedRow) SerializationUtils.clone(m1b1d8);
+        var m2b1 = SerializationUtils.clone(m1b1);
+        var m2b2 = SerializationUtils.clone(m2b1);
+        var m1b1d8 = SerializationUtils.clone(m1b1);
+        var m2b1d8 = SerializationUtils.clone(m1b1d8);
 
         m2b1.setMethod("2");
         m2b1.setBlock("2");
         m1b1d8.setDepth("8");
         m1b1d8.setMethod("2");
 
-        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, Arrays.asList("ERZ1"),
-                Arrays.asList(), Arrays.asList(m1b1, m2b1, m2b2, m1b1d8, m2b1d8));
+        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, List.of("ERZ1"),
+                List.of(), Arrays.asList(m1b1, m2b1, m2b2, m1b1d8, m2b1d8));
 
-        assertTrue(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
+        Assertions.assertTrue(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
     }
 
     @Test
@@ -102,10 +104,10 @@ class ATRCMethodCheckIT {
         row.setSiteCode(siteNo);
         row.setSpecies("Haliotis rubra");
 
-        var res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, false, Arrays.asList("ERZ1"),
-                Arrays.asList(), Arrays.asList(row));
+        var res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, false, List.of("ERZ1"),
+                List.of(), List.of(row));
 
-        assertFalse(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
+        Assertions.assertFalse(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
     }
 
 
@@ -123,22 +125,22 @@ class ATRCMethodCheckIT {
         m0b1.setDepth(depth);
         m0b1.setSiteCode(siteNo);
 
-        StagedRow m0b2 = (StagedRow) SerializationUtils.clone(m0b1);
+        StagedRow m0b2 = SerializationUtils.clone(m0b1);
         m0b2.setBlock("2");
 
-        StagedRow m3b1 = (StagedRow) SerializationUtils.clone(m0b1);
+        StagedRow m3b1 = SerializationUtils.clone(m0b1);
         m3b1.setMethod("3");
 
-        StagedRow m3b3 = (StagedRow) SerializationUtils.clone(m3b1);
+        StagedRow m3b3 = SerializationUtils.clone(m3b1);
         m3b3.setBlock("3");
 
-        StagedRow m5b3 = (StagedRow) SerializationUtils.clone(m3b1);
+        StagedRow m5b3 = SerializationUtils.clone(m3b1);
         m5b3.setBlock("5");
 
-        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, Arrays.asList("ERZ1"),
-                Arrays.asList(), Arrays.asList(m0b1, m0b2, m3b1, m3b3, m5b3));
+        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, List.of("ERZ1"),
+                List.of(), Arrays.asList(m0b1, m0b2, m3b1, m3b3, m5b3));
 
-        assertFalse(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
+        Assertions.assertFalse(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
     }
 
     @Test
@@ -154,16 +156,16 @@ class ATRCMethodCheckIT {
         m1b1.setDepth(depth);
         m1b1.setSiteCode(siteNo);
 
-        StagedRow m1b1d10 = (StagedRow) SerializationUtils.clone(m1b1);
+        StagedRow m1b1d10 = SerializationUtils.clone(m1b1);
         m1b1d10.setDepth("10");
-        StagedRow m1b1d8 = (StagedRow) SerializationUtils.clone(m1b1);
+        StagedRow m1b1d8 = SerializationUtils.clone(m1b1);
         m1b1d8.setDepth("8");
-        StagedRow m2b1d8 = (StagedRow) SerializationUtils.clone(m1b1d8);
+        StagedRow m2b1d8 = SerializationUtils.clone(m1b1d8);
         m1b1d8.setMethod("2");
 
-        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, Arrays.asList("ERZ1"),
-                Arrays.asList(), Arrays.asList(m1b1, m1b1d10, m1b1d8, m2b1d8));
+        Collection<SurveyValidationError> res = dataValidation.checkFormatting(ProgramValidation.ATRC, false, true, List.of("ERZ1"),
+                List.of(), Arrays.asList(m1b1, m1b1d10, m1b1d8, m2b1d8));
 
-        assertFalse(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
+        Assertions.assertFalse(res.stream().anyMatch(e -> e.getMessage().equalsIgnoreCase("ATRC Method must be [0-5], 7 or 10")));
     }
 }
